# 054.fastapi-deps

./: README.md  pyproject.toml
fastapi-application/: .env.template  main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/versions/: 2025_04_08_1443-c24058b69c96_create_users_table.py  2025_04_09_1619-35758dd0999f_create_access_token_table.py
fastapi-application/api/api_v1/: __init__.py  auth.py  dependencies_examples.py  messages.py  users.py
fastapi-application/api/api_v1/dependencies/: cls_deps.py  func_deps.py
fastapi-application/api/dependencies/authentication/: access_tokens.py  backend.py
fastapi-application/api/webhooks/: user.py
fastapi-application/core/: config.py
fastapi-application/core/authentication/: user_manager.py
fastapi-application/core/models/: __init__.py  access_token.py  base.py  db_helper.py
fastapi-application/core/models/mixins/: id_int_pk.py
fastapi-application/core/schemas/: user.py
fastapi-application/untils/: helper.py
fastapi-application/untils/webhooks/: user.py
